--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-node_modules
-src
-dist
+/node_modules
+/src
+/dist
 /.pnp
 .pnp.js
 
