--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bobi-icon-svgr",
-  "version": "1.0.0",
-  "description": "Bobibs Icon Svgr",
+  "version": "1.0.1",
+  "description": "Bobi Icon Svgr",
   "main": "dist/index.esm.js",
   "module": "dist/index.esm.js",
   "files": [
